[project]
name = "text-to-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==1.3.11",
    "langchain-community>=0.4.2",
    "langchain-groq==1.1.3",
    "langgraph==1.2.7",
    "pydantic>=2.0,<3.0",
    "python-dotenv==1.2.2",
    "sqlalchemy>=2.0.51",
    "streamlit==1.58.0",
]
